k8sproj/manifests/service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sproj-svc
spec:
  type: ClusterIP
  selector:
    app: k8sproj
  ports:
    - name: http
      protocol: TCP
      port: 2345 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8000 # This is the target port
