k8sproj/manifests/service_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sproj-svc
spec:
  type: NodePort
  selector:
    app: k8sproj
  ports:
    - name: http
      nodePort: 30080 # This is the port that is available outside. Value for nodePort can be between 30000-32767
      protocol: TCP
      port: 1234 # This is a port that is available to the cluster, in this case it can be ~ anything
      targetPort: 8000 # This is the target port
