k8sproj/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
  labels:
    name: dwk-material-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: k8sproj-svc
            port: 
              number: 2345   # This is a port that is specified in service
